--- a/uMD_GUI-30-Dec-7.29PM-20250316T042754Z-001/uMD_GUI-30-Dec-7.29PM/uMD_GUI.vbproj
+++ b/uMD_GUI-30-Dec-7.29PM-20250316T042754Z-001/uMD_GUI-30-Dec-7.29PM/uMD_GUI.vbproj
@@ -61,6 +61,12 @@
     <ApplicationIcon>Resources\uMD1icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MQTTnet, Version=4.3.7.1207, Culture=neutral, PublicKeyToken=fdb7629f2e364a63, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\MQTTnet.4.3.7.1207\lib\net461\MQTTnet.dll</HintPath>
+    </Reference>
+    <Reference Include="MQTTnet.Extensions.ManagedClient, Version=4.3.7.1207, Culture=neutral, PublicKeyToken=fdb7629f2e364a63, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\MQTTnet.Extensions.ManagedClient.4.3.7.1207\lib\net461\MQTTnet.Extensions.ManagedClient.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -103,6 +109,7 @@
     <Compile Include="information.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="mqtt.vb" />
     <Compile Include="MainForm.Designer.vb">
       <DependentUpon>MainForm.vb</DependentUpon>
     </Compile>
@@ -197,6 +204,7 @@
   <ItemGroup>
     <Content Include="Resources\ActiveButton6.gif" />
     <Content Include="Resources\uMD1icon.ico" />
+    <None Include="packages.config" />
     <None Include="Resources\Orange1.gif" />
     <None Include="Resources\YellowButton11.gif" />
     <None Include="Resources\InActiveButton41.gif" />
